--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Fri May 06 23:59:17 CEST 2011
+#Sat May 07 15:00:03 CEST 2011
 app.grails.version=1.3.5
 app.name=eldisparate
 app.servlet.version=2.4
 app.version=0.1
+plugins.cloud-foundry=1.0.0.M3
 plugins.hibernate=1.3.5
 plugins.tomcat=1.3.5
