--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #Grails Metadata file
-#Sun May 08 02:17:40 CEST 2011
-app.grails.version=1.3.7
+#Sat Feb 04 22:49:14 CET 2012
+app.grails.version=2.0.0
 app.name=eldisparate
 app.servlet.version=2.4
 app.version=0.1
 plugins.cloud-foundry=1.0.0.M3
-plugins.hibernate=1.3.7
-plugins.tomcat=1.3.7
+plugins.hibernate=2.0.0
+plugins.tomcat=2.0.0
