--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #Grails Metadata file
-#Sat Feb 04 22:49:14 CET 2012
-app.grails.version=2.0.0
+#Wed Jun 06 11:28:46 CEST 2012
+app.grails.version=2.0.3
 app.name=eldisparate
 app.servlet.version=2.4
 app.version=0.1
 plugins.cloud-foundry=1.0.0.M3
-plugins.hibernate=2.0.0
-plugins.tomcat=2.0.0
+plugins.hibernate=2.0.3
+plugins.tomcat=2.0.3
