--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Wed Oct 16 00:30:45 CEST 2013
-app.grails.version=2.2.1
+#Sat Feb 08 18:51:21 CET 2014
+app.grails.version=2.2.4
 app.name=eldisparate
 app.servlet.version=2.5
 app.version=0.1
-plugins.hibernate=2.2.1
-plugins.tomcat=2.2.1
+plugins.hibernate=2.2.4
+plugins.tomcat=2.2.4
